2002-07-15  Richard Williamson (Home)  <rjw@apple.com>

        Added isFrameSet method.
        
        * WebCore.pbproj/project.pbxproj:
        * khtml/khtml_part.cpp:
        (KHTMLPart::isFrameSet):
        * khtml/khtml_part.h:
        * kwq/KWQKHTMLPart.mm:
        * kwq/KWQKHTMLPartImpl.cpp: Added.
        (KWQKHTMLPartImpl::isFrameSet):
        * kwq/KWQKHTMLPartImpl.h:
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge isFrameSet]):

2002-07-15  Darin Adler  <darin@apple.com>

        * WebCore.pbproj/project.pbxproj: Removed KWQKPrinter.mm.
        * kwq/KWQKPrinter.mm: Removed.

2002-07-15  Darin Adler  <darin@apple.com>

        * WebCore.pbproj/project.pbxproj: Removed unused qpopupmenu.h.
        * kwq/kdecore/ksimpleconfig.h: Removed unnecessary include of <config.h>.
        * kwq/kio/global.h: Removed unnecessary include of <config.h>.
        * kwq/kio/kprinter.h: Emptied out this file.
        * kwq/qt/qpopupmenu.h: Removed.
        * kwq/qt/qstylesheet.h: Removed unnecessary include of <config.h>.
        * kwq/qt/qtextedit.h: Removed unnecessary include of <config.h>.

2002-07-15  Darin Adler  <darin@apple.com>

        * kwq/qt/qfontmetrics.h: Remove unused, and not properly implemented,
	empty constructor. Add some const that was missing. Remove most of the
	parameters of size().
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::charWidth): Add const.
        (QFontMetrics::floatWidth): Add const.
        (QFontMetrics::floatCharacterWidth): Add const.
        (QFontMetrics::size): Remove unused parameters.

        * kwq/WebCoreTextRenderer.h: Remove two unused drawString methods and one
	unused widthForCharacters method.

2002-07-14  Darin Adler  <darin@apple.com>

        * kwq/WebCoreFrame.mm: (-[WebCoreFrame dealloc]): Fix NULL-dereferencing
	problem that was hidden by the "leak the world" bug in WebBrowser.

2002-07-14  Maciej Stachowiak  <mjs@apple.com>
